# rag-enterprise-starterkit

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
samples/: queries.json
samples/documents/: sample_text.txt
src/rag_starterkit/: main.py
src/rag_starterkit/api/: routes.py  schemas.py
src/rag_starterkit/core/: logging.py
src/rag_starterkit/data/: ingest.py
src/rag_starterkit/ingest/: concept_tagger.py  heading_detector.py  hierarchy_builder.py  leaf_chunker.py  pdf_loader.py  relations_builder.py  toc_parser.py
src/rag_starterkit/rag/: generator.py  retriever.py
tests/: test_contract.py  test_health.py
